# spires-contract

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  publish-pypi.yml
doc/: .gitignore  requirements.txt
doc/source/: api.rst  conf.py  index.rst
spires_contract/: __init__.py  _validate.py  alignment.py  clusters.py  conventions.py  data.py  inversion_exclusion.py  inversion_input.py  lut.py  r0.py  results.py  spectra.py
src/spires_contract/: __init__.py  _validate.py  alignment.py  conventions.py  data.py  lut.py  r0.py  results.py  spectra.py
tests/: test_conventions.py  test_lut.py  test_spectra.py  test_validate.py
