[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spires-contract"
description = "Data-interface contracts (xarray schemas + validators) for the SPIReS package family"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Niklas Griessbaum" }]
keywords = ["snow", "remote sensing", "xarray", "data contract", "validation"]
dependencies = [
    "numpy",
    "xarray",
]
dynamic = ["version"]  # version derived from git tags via setuptools_scm

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/SPIReS-Organization/spires-contract"
Repository = "https://github.com/SPIReS-Organization/spires-contract"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
